helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wabank-nodejs-deploy
  namespace: nodejs-dev
  labels:
    app: wabank-nodejs-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wabank-nodejs-deploy
  template:
    metadata:
      labels:
        app: wabank-nodejs-deploy
    spec:
      containers:
      - name: wabank-nodejs-deploy
        image: wabankcontainerregistry.azurecr.io/nodejs-deposit:latest
        imagePullSecrets:
          - name: acr-secret
